--- a/css/styles.css
+++ b/css/styles.css
@@ -411,6 +411,8 @@ h2 {
   fill: var(--main-color);
   color: var(--main-color);
   border: 1px solid var(--main-color);
+  transition: transform 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .find-us-placement {
   display: flex;
@@ -552,11 +554,9 @@ h2 {
   transition-duration: 1s;
   transition-timing-function: ease;
 }
-
 .backdrop.is-hidden .modal {
   transform: translate(0%, 0%) scale(0.4);
 }
-
 .modal-btn-close {
   position: absolute;
   top: 8px;
@@ -574,4 +574,178 @@ h2 {
   padding-right: 0px;
   padding-top: 0px;
   padding-bottom: 0px;
+}
+.modal-heading {
+  font-size: 20px;
+  line-height: 1.15;
+  text-align: center;
+  letter-spacing: 0.03em;
+  padding-top: 40px;
+  padding-bottom: 12px;
+}
+.input-style {
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  width: 448px;
+  padding: 12px 42px 12px 42px;
+  display: block;
+  margin-bottom: 10px;
+  margin-top: 4px;
+}
+.label-style {
+  font-size: 12px;
+  line-height: 1.16;
+  letter-spacing: 0.01em;
+  color: var(--second-font-color);
+  text-align: -webkit-center;
+  padding-left: 40px;
+}
+.checkbox-style {
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+  color: var(--second-font-color);
+  display: flex;
+  justify-content: center;
+  padding-top: 20px;
+}
+.button-send-style {
+  color: white;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.87;
+  text-align: center;
+  background-color: var(--main-color);
+  border: var(--main-color);
+  border-radius: 4px;
+  cursor: pointer;
+  letter-spacing: 0.06em;
+  padding: 10px 76px 10px 76px;
+  margin-bottom: 40px;
+  margin-top: 30px;
+}
+.button-position {
+  display: flex;
+  justify-content: center;
+}
+.link-style {
+  color: var(--main-color);
+}
+.input-styling:hover input {
+  transition: transform 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  border: 1px solid var(--main-color);
+}
+.input-styling:hover svg {
+  fill: var(--main-color);
+  outline: none;
+  transition: transform 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+.input-styling:focus-within svg {
+  fill: var(--main-color);
+  outline: none;
+  transition: transform 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+.input-styling:focus-within input {
+  border: 1px solid var(--main-color);
+  outline: none;
+  transition: transform 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+.input-styling {
+  display: inline;
+}
+.svg-name-position {
+  position: relative;
+  top: 37px;
+  right: 22px;
+}
+.svg-tel-position {
+  position: relative;
+  top: 37px;
+  right: 48px;
+}
+.svg-email-position {
+  position: relative;
+  top: 37px;
+  right: 20px;
+}
+.textarea-style {
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  margin-top: 4px;
+  padding: 12px 16px 12px 16px;
+  width: 448px;
+}
+.textarea-style:hover,
+.textarea-style:focus {
+  border: 1px solid var(--main-color);
+  outline: none;
+  transition: transform 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+.comments-style {
+  font-size: 12px;
+  line-height: 1.16;
+  letter-spacing: 0.01em;
+  color: var(--second-font-color);
+  padding-left: 40px;
+  display: inline-grid;
+}
+.checkbox-box-style {
+  margin-right: 7px;
+}
+.svg-check-position {
+  opacity: 0;
+  position: relative;
+  top: 4px;
+  right: 22px;
+  cursor: pointer;
+}
+.checkbox-box-style:checked + .svg-check-position {
+  opacity: 1;
+}
+.sub-style {
+  padding-left: 180px;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+}
+.sub-email-input {
+  width: 358px;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+  border-radius: 4px;
+  background-color: inherit;
+  padding: 15px 16px 15px 16px;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.25;
+  color: rgba(255, 255, 255, 0.6);
+}
+.sub-email-position {
+  padding-left: 66px;
+  padding-right: 12px;
+}
+.sub-button {
+  width: 200px;
+  background: #2196f3;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  border: none;
+  padding: 10px 76px 10px 42px;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.87;
+  color: #fff;
+  cursor: pointer;
+}
+.send-icon {
+  position: absolute;
+  margin-left: -50px;
+  margin-top: 12px;
 }
