--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,6 +1,13 @@
-@use "./utils/vars" as *;
-@import "./components/navigation";
-
-body {
-  color: $defaultFontColor;
-}
+@import "./utils/vars";
+@import "./utils/global";
+@import "./components/header";
+@import "./components/background";
+@import "./components/buttons";
+@import "./components/info";
+@import "./components/about-us";
+@import "./components/our-team.scss";
+@import "./components/companies";
+@import "./components/footer";
+@import "./components/modal";
+@import "./components/filter-buttons";
+@import "./components/box-list";
