--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -34,30 +34,27 @@
       transition-timing-function: $transitionTiming-default;
     }
   }
-  &__underline-studio {
+  &__underline {
     position: relative;
-    &::after {
+    &--studio::after {
       content: "";
       position: absolute;
       width: 42px;
       height: 4px;
       top: 44px;
       left: 0px;
-      background: $color-main;
       border-radius: 2px;
+      background: $color-main;
     }
-  }
-  &__underline-portfolio {
-    position: relative;
-    &::after {
+    &--portfolio::after {
       content: "";
       position: absolute;
       width: 57px;
       height: 4px;
       top: 44px;
       left: 0px;
-      background: $color-main;
       border-radius: 2px;
+      background: $color-main;
     }
   }
   &__inside-padding {
