--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -73,6 +73,7 @@
     letter-spacing: 0.03em;
     padding-top: 40px;
     padding-bottom: 12px;
+    margin: 0px;
   }
   &__label {
     font-family: $fontFamily-roboto;
@@ -83,6 +84,7 @@
     color: $color-second-font;
     display: block;
     padding-left: 40px;
+    padding-right: 40px;
   }
   &__input-hfa {
     display: inline;
@@ -124,7 +126,7 @@
   &__input {
     border: 1px solid $color-modal-input;
     border-radius: 4px;
-    width: 448px;
+    width: 100%;
     padding: 12px 42px 12px 42px;
     display: block;
     margin-bottom: 10px;
